<resources>
    <string name="app_name">MakeYakudo</string>
    <string name="tag_text_default">TAG</string>
    <string name="answer_text_default">Press select picture</string>
    <string name="answer_text_format">Hello %s,\nNice to see you.</string>
    <string name="name_input_hint">Name</string>
    <string name="go_button_label">Select</string>
    <string name="back_button_label">back</string>
    <string name="save_button_label">save</string>
    <string name="ok_button_label">OK</string>
    <string name="tweet_button_label">tweet</string>
    <string name="button">Get Image</string>
    <string name="description">a picture</string>
    <string name="message_Select">select picture</string>
    <string name="message_Flick">flick to yakudo</string>
    <string name="message_Save">save or back</string>

</resources>
